<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:layout_marginTop="3dp"
    android:padding="7dp"
    android:background="@drawable/borda"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view_usuario"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            tools:srcCompat="@tools:sample/avatars"></ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:text="Usuário"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:textStyle="bold"></androidx.appcompat.widget.AppCompatTextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_view_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="07/09/2020"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:textStyle="bold"></androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_view_hora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="20:00"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:textStyle="bold"></androidx.appcompat.widget.AppCompatTextView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorRed"
            android:gravity="center_horizontal"
            android:text="@string/dados_do_paciente"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:textStyle="bold"></androidx.appcompat.widget.AppCompatTextView>

        <LinearLayout style="@style/LinearLayout">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextView"
                android:layout_marginRight="10dp"
                android:text="@string/nome"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_nome"
                style="@style/TextView"></androidx.appcompat.widget.AppCompatTextView>

        </LinearLayout>

        <LinearLayout style="@style/LinearLayout">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextView"
                android:layout_marginRight="10dp"
                android:text="@string/tipo_sanguineo"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_tipoSanguineo"
                style="@style/TextView"></androidx.appcompat.widget.AppCompatTextView>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorRed"
            android:gravity="center_horizontal"
            android:text="@string/dados_do_hospital"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:textStyle="bold"></androidx.appcompat.widget.AppCompatTextView>

        <LinearLayout style="@style/LinearLayout">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextView"
                android:layout_marginRight="10dp"
                android:text="@string/hospital"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_hospital"
                style="@style/TextView"></androidx.appcompat.widget.AppCompatTextView>

        </LinearLayout>

        <LinearLayout style="@style/LinearLayout">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextView"
                android:layout_marginRight="10dp"
                android:text="@string/cidade"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_cidade"
                style="@style/TextView"></androidx.appcompat.widget.AppCompatTextView>

        </LinearLayout>

        <LinearLayout style="@style/LinearLayout">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextView"
                android:layout_marginRight="10dp"
                android:text="@string/bairro"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_bairro"
                style="@style/TextView"></androidx.appcompat.widget.AppCompatTextView>

        </LinearLayout>

        <LinearLayout style="@style/LinearLayout">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextView"
                android:layout_marginRight="10dp"
                android:text="@string/rua"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_rua"
                style="@style/TextView"></androidx.appcompat.widget.AppCompatTextView>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"></View>

    </LinearLayout>


</LinearLayout>